@@ -1,3 +1,6 @@
+2005-03-09 Ian Rutt
+ * Added glimmer_daily_pdd.f90, but not plumbed in yet.
+
 2005-03-08 Magnus Hagdorn
  * removed install-sh, it is autogenerated when bootstrap is run
 
@@ -11,7 +14,7 @@
  * Removed redundant mass-balance timestep value from glint_type
  * Made glint_vars.def a bit more sensible
  * Minor changes to glint_example config file
-	
+
 2005-03-07 Magnus Hagdorn
  * glimmer_ncio.f90: fixed bug #110
 
